--- a/code.css
+++ b/code.css
@@ -30,4 +30,9 @@ button {
     border: none;
     border-radius: 2px;
     outline: none;
+    cursor: pointer;
+}
+
+img {
+    margin-top: 10%;
 }
